--- a/portfolio-viz.html
+++ b/portfolio-viz.html
@@ -1,5 +1,5 @@
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://unpkg.com/papaparse@latest/papaparse.min.js"></script>
-
 <input id="myfile" type="file"/>
 
 <script src="portfolio-viz.js"></script>
