--- a/portfolio-viz.html
+++ b/portfolio-viz.html
@@ -1,4 +1,22 @@
-<script src="https://unpkg.com/papaparse@latest/papaparse.min.js"></script>
-<input id="myfile" type="file"/>
+<!DOCTYPE html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Portfolio Map</title>
+  <script src="https://unpkg.com/papaparse@latest/papaparse.min.js"></script>
+</head>
+<body>
+
+<div>
+  <input id="myfile" type="file"/>
+</div>
+
+<div>
+  <canvas id="myCanvas" width="100%" height="100%" style="border:1px solid #c3c3c3;">
+    Your browser does not support the canvas element.
+  </canvas>
+</div>
 
 <script src="portfolio-viz.js"></script>
+</body>
+</html>
