--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <div>
-  <canvas id="myCanvas" width="100px" height="100px" style="border:1px solid #c3c3c3; display: none;">
+  <canvas id="myCanvas" width="100px" height="100px" style="border:1px solid #c3c3c3; display: none;" title="">
     Your browser does not support the canvas element.
   </canvas>
 </div>
