Load font family.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Portfolio Map</title>
+
   <script src="https://unpkg.com/papaparse@latest/papaparse.min.js"></script>
+
+  <!-- Load fonts -->
+  <link rel="stylesheet" href="https://use.typekit.net/gmy3tad.css">
+
 </head>
 <body>
 
@@ -15,7 +20,7 @@
 
 <div>
   <input id="myfile" type="file"/>
-  <span id="info"></span>
+  <span id="info" style="font-family: courier-std"></span>
 </div>
 
 <script src="index.js"></script>
