--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </div>
 
 <div>
+  <div id="tutorial">Upload a csv file with 2 columns (ticker, number_of_shares).</div>
   <input id="myfile" type="file"/>
   <span id="info" style="font-family: courier-std"></span>
 </div>
