--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Portfolio Map</title>
 
   <script src="https://unpkg.com/papaparse@latest/papaparse.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.13.5/xlsx.full.min.js"></script>
 
   <!-- Load fonts -->
   <link rel="stylesheet" href="https://use.typekit.net/gmy3tad.css">
@@ -19,7 +20,7 @@
 </div>
 
 <div>
-  <div id="tutorial">Upload a csv file with 2 columns (ticker, number_of_shares).</div>
+  <div id="tutorial">Upload a csv or excel file with 2 columns (ticker, number_of_shares).</div>
   <input id="myfile" type="file"/>
   <span id="info" style="font-family: courier-std"></span>
 </div>
