added max time_since and changed 1W to 5D

--- a/index.html
+++ b/index.html
@@ -21,16 +21,17 @@
 
 <div>
   <div id="tutorial">Upload a csv or excel file with 2 columns (ticker, number_of_shares).</div>
-  <input id="myfile" type="file"/>
-  <span>Time: </span>
+  <input id="myfile" type="file" style="width: 200px"/>
+  <span>Time:</span>
   <select id="time_since" style="font-family: courier-std" onchange="{ refreshDataAndRedraw(); }">
     <option value="1d">1D</option>
-    <option value="5d">1W</option>
+    <option value="5d">5D</option>
     <option value="1mo">1M</option>
     <option value="6mo">6M</option>
     <option value="ytd">YTD</option>
     <option value="1y">1Y</option>
     <option value="5y">5Y</option>
+    <option value="max">Max</option>
   </select>
   <span>&nbsp;</span>
   <span id="totalMarketValueStr"></span>
