switched backends so that it works again, default to text so it's easier to try out

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
   <span>Input:</span>
   <select id="input-type" style="font-family: courier-std; margin-right: 10px;" onchange="{ updateInputDisplay(); }">
-    <option value="file">File</option>
     <option value="text">Text</option>
+    <option value="file">File</option>
   </select>
 
   <input id="myfile" type="file" style="width: 200px;" class="inline" />
   <span id="mytext" class="hidden" style="white-space: nowrap;">
-    <textarea id="mytext-input" rows=1 cols=10 style="width:180px; height:3.5em;">ticker, number_of_shares&#10;AMC, 237&#10;GME, 53.9</textarea>
+    <textarea id="mytext-input" rows=1 cols=10 style="width:200px; height:5.5em;">ticker, number_of_shares&#10;SPY, 0.75E6&#10;IWM, 0.44E6&#10;NVDA, 0.17E6&#10;TSLA, 0.3E6</textarea>
     <button id="mytext-button" type="button" style="margin-right: 50px;" onclick="{ onMytextSubmit(); }">Submit</button>
   </span>
   
